# zeroth

./: .gitignore  Assets.sublime-project  CMakeLists.txt  Client.Config.json  Client.Settings.json  Client.config  GenerateSources.bat  InputAxes.XBox.config  README.md  Settings.json  Sources.cmake  Zeroth.sln  Zeroth.vcxproj  Zeroth.vcxproj.filters  deploy.py  run_all_tests.py
Assets/: CMakeLists.txt  Cube.entity  GenerateSources.bat  Sources.cmake  ZerothCommonAssets.vcxproj  ZerothCommonAssets.vcxproj.filters
Assets/Common/: GalaxySpace.scene  LocalSpace.scene  Noise.glsl
Assets/Entities/: CelestialBody.entity.yaml  LocalPlayerBase.entity.yaml  Star.entity.yaml
Assets/Galaxy/: Star.texture  Zeroth.entity
Assets/Materials/: GalaxyImposter.Fragment.glsl  GalaxyImposter.Vertex.glsl  GalaxyImposter.material.yaml  GalaxyImposter.shader.yaml  GalaxyImposter.texture2.yaml
Assets/Meshes/: Point.mesh.yaml
Assets/Noise/: NoiseTest.glsl  NoiseTest.shader  ShowNoise.glsl  ShowNoise.shader
Assets/Scenes/: BaseGalactic.scene  Client.scene.yaml  Intergalactic.scene.yaml  Master.scene  ProxyGalaxy.scene  Stellar.scene.yaml  ZerothSystem.scene.yaml
Assets/Ships/: CockpitCamera.entity  Indor.Cockpit.entity  Indor.Hull.material  Indor.Hull.mesh  Indor.Screen.mesh  Indor.ScreenFrame.mesh  Indor.Seat.mesh  Indor.entity  Monkey.Suzanne.mesh  Viper.Cockpit.entity  Viper.Collision.mesh  Viper.Hull.material  Viper.entity
Assets/Test/: Base.scene  Black.texture2  Cube.Diffuse.texture  Cube.Main.mesh  Cube.Material.texture  Cube.Normal.texture  Cube.material  Cube.mesh  Dusty.material  Frigate.entity  Frigate.material  Indor.Hull.mesh  MaterialTest.Base.mesh  MaterialTest.entity  MaterialTest.material  MetalCrate.Diffuse.texture  MetalCrate.Diffuse.texture2  MetalCrate.Material.texture  MetalCrate.Material.texture2  MetalCrate.Normal.texture  MetalCrate.Normal.texture2  MetalCrate.material  MonkeyHead.blend  MonkeyHead.mesh  Observer.entity  Observer.scene  Player.entity  Scene.scene  Sides.texturecube  Skybox.entity  Space.cubictexture  Space.texture  Space.texturecube  Test.noisefunction  Test.scene  TestGalaxySpace.scene  TestLocalSpace.scene  Test_D.texture  Test_M.texture  Test_N.texture  (+3 more)
Assets/TextureGenerator/: GlowParticle.glsl  GlowParticle.shader  SpiralTopology.shader
Assets/Working/: 1.blend  Assaulter.blend  Assaulter.blend1  Cube.blend  Cube2.blend  Indor.Baked.blend  Indor.blend  Indor.blend1  Indor.mesh  Monkey.blend  Monkey.blend1  New1.blend  Seat.3ds  Seat.fbx  Seat.mtl  SensorProbe.blend  Squid.blend  Squid.blend1
Client/: CMakeLists.txt
Config/: Zeroth.InputAxes.SaitekX52.config  Zeroth.InputAxes.XBox.config  Zeroth.config
Deploy/: Settings.json
Design/: Architecture.md  Gameplay.md  ShipSystems.md
Executable/: CMakeLists.txt
Settings/: CMakeLists.txt  DefaultInputAxes.yaml  GenerateSources.bat  Sources.cmake  Zeroth.InputAxes.Observer.settings  Zeroth.InputAxes.SaitekX52.settings  Zeroth.InputAxes.Ship.SaitekX52.settings  Zeroth.InputAxes.XBox.settings  Zeroth.settings  ZerothSettings.yaml
Source/: AssetRefreshLoop.cpp  AssetRefreshLoop.h  Export.h  GalaxyGenerator.cpp  GalaxyGenerator.h  LocalScene.cpp  LocalScene.h  Main.cpp  MainLogicLayer.cpp  MainLogicLayer.h  MainLoop.cpp  MainLoop.h  MaterialTestLoop.cpp  MaterialTestLoop.h  OrbitScene.cpp  OrbitScene.h  RegisterComponents.cpp  RegisterComponents.h  ServerLoop.cpp  ServerLoop.h  TextureGenerator.cpp  TextureGenerator.h  ZerothApplication.cpp  ZerothApplication.h  ZerothGame.cpp  ZerothGame.h  ZerothGameMode.cpp  ZerothGameMode.h  ZerothScene.cpp  ZerothScene.h  ZerothWorld.cpp  ZerothWorld.h
Source/Components/: BatteryComponent.h  BatterySlotComponent.h  CelestialBodyComponent.h  CelestialObjectComponent.h  ChaseCamera.h  ChaseCameraComponent.h  CockpitCamera.h  CockpitCameraComponent.h  Galaxy.cpp  Galaxy.h  GalaxyImposterCellComponent.h  GalaxyNode.h  GalaxyNodeComponent.h  ObserverCamera.h  ObserverCameraComponent.h  OrbitComponent.h  ParticleOctreeComponent.h  ParticleOctreeNodeComponent.h  Planet.h  PlanetComponent.h  PlanetPatch.h  PlanetPatchComponent.h  Planetoid.h  PlanetoidComponent.h  PlanetoidPatch.h  PlayerCamera.h  PlayerComponent.h  PlayerShipControl.h  PlayerShipControlComponent.h  ProxyGalaxy.h  ProxyGalaxyComponent.h  Ship.cpp  Ship.h  ShipComponent.h  SpiralGalaxy.h  SpiralGalaxyComponent.h  StarComponent.h  Thruster.cpp  Thruster.h  ThrusterComponent.h
Source/Modes/: TestMode.cpp  TestMode.h  TestNoiseMode.cpp  TestNoiseMode.h
Source/Scenes/: CelestialScene.cpp  CelestialScene.h  ClientScene.cpp  ClientScene.h  GalacticScene.cpp  GalacticScene.h  IntergalacticScene.cpp  IntergalacticScene.h  InterstellarScene.cpp  InterstellarScene.h  RootScene.cpp  RootScene.h  StellarScene.cpp  StellarScene.h  SystemicScene.cpp  SystemicScene.h  ZerothScene.cpp  ZerothScene.h
Source/Systems/: CelestialBodySystem.cpp  CelestialBodySystem.h  CelestialObjectSystem.cpp  CelestialObjectSystem.h  ChaseCameraSystem.cpp  ChaseCameraSystem.h  CockpitCameraSystem.cpp  CockpitCameraSystem.h  GalaxyImposterSystem.cpp  GalaxyImposterSystem.h  GalaxySystem.cpp  GalaxySystem.h  GameplaySystem.cpp  GameplaySystem.h  HudSystem.cpp  HudSystem.h  ObserverCameraSystem.cpp  ObserverCameraSystem.h  ParticleOctreeSystem.cpp  ParticleOctreeSystem.h  PlanetSystem.cpp  PlanetSystem.h  PlanetoidSystem.cpp  PlanetoidSystem.h  PlayerCameraSystem.cpp  PlayerCameraSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  PlayerShipControlSystem.cpp  PlayerShipControlSystem.h  ProceduralTextureSystem.cpp  ProceduralTextureSystem.h  ProxyGalaxySystem.cpp  ProxyGalaxySystem.h  ShipControlSystem.cpp  ShipControlSystem.h  StarSystemGeneratorSystem.cpp  StarSystemGeneratorSystem.h
Tests/PerformanceTests/: CMakeLists.txt
Tests/PerformanceTests/Settings/: ZerothPerformanceTestsSettings.yaml
Tests/PerformanceTests/Source/: Main.cpp  PlanetTests.cpp
Tests/SystemTests/: CMakeLists.txt
Tests/SystemTests/Source/: Main.cpp
Tests/UnitTests/: CMakeLists.txt
Tests/UnitTests/Source/: Main.cpp
Tools/: format.py
(+97 files in other folders)
